# font_manager

./: CHANGELOG.md  FINAL_RELEASE_CHECKLIST.md  GITHUB_TEST_GUIDE.md  LICENSE  MANIFEST.in  PUBLISH_GUIDE.md  README.md  README_FONTMANAGER_USAGE.md  README_GITHUB.md  USAGE_GUIDE.md  __init__.py  auto_test_github.py  fengshui_analysis_with_font_fix.py  final_fontmanager_verification.py  font_manager_demo.py  font_manager_success_demo.py  fontmanager_robust.py  pyproject.toml  quick_verify.py  requirements.txt  setup.py  setup_global_font_manager.py  test_font_manager_chinese.py  上传指南.md  快速修复中文显示.py
adapters/: __init__.py  linux.py  windows.py
core/: detector.py  exceptions.py  manager.py  styles.py
docs/: font_library_readme.md  font_manager_final_status.md  font_manager_project_summary.md
examples/: comprehensive_demo.py  demo_font_manager.py  emoji_demo.py  final_font_verification.py  quick_start.py
font_manager/: __init__.py
font_manager/adapters/: base.py  factory.py  macos.py
font_manager/core/: __init__.py  config.py  manager.py  models.py
font_manager/data/: default_config.json
font_manager/utils/: helpers.py
tests/: test_config_manager.py  test_fixed_api.py  test_fixed_collector.py  test_font_detector.py  test_font_manager.py  test_style_manager.py
tests/integration/: test_emoji_integration.py  test_fontmanager_fix.py
tests/unit/: test_emoji_config.py  test_emoji_detector.py  test_enhanced_fontinfo.py
utils/: __init__.py  logger.py
validators/: __init__.py
